force-app/main/default/objects/SPEN_Employee__c/SPEN_Employee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Employee Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>