force-app/main/default/objects/SPEN_Employee__c/fields/SPEN_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmailAddress__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>