force-app/main/default/objects/SPEN_Employee__c/fields/SPEN_EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmployeeNumber__c</fullName>
    <label>Employee Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>