force-app/main/default/objects/SPEN_Employee__c/fields/SPEN_FirstName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FirstName__c</fullName>
    <description>Used for 3PD Tyoe</description>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>