force-app/main/default/objects/SPEN_Employee__c/fields/SPEN_LastName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastName__c</fullName>
    <description>Used for 3PD Type</description>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>