force-app/main/default/objects/SPEN_Employee__c/fields/SPEN_MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MobileNumber__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>