force-app/main/default/objects/SPEN_Employee__c/fields/SPEN_Title__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Title__c</fullName>
    <description>For 3PD type</description>
    <label>Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>