force-app/main/default/objects/SPEN_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_EmployeeNumber__c</columns>
    <columns>SPEN_FirstName__c</columns>
    <columns>SPEN_LastName__c</columns>
    <columns>SPEN_MobileNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>